--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://aadi123.github.io/'
 languageCode = 'en-us'
 title = 'abhyāsa'
 theme = 'risotto'
+
+[params.theme]
+palette = 'base16-onedark'
