--- a/hugo.toml
+++ b/hugo.toml
@@ -5,3 +5,8 @@ theme = 'risotto'
 
 [params.theme]
 palette = 'base16-onedark'
+
+[params.about]
+title = "Aaditya Murthy"
+description = "Software Engineer. Musician. Boba Enthusiast."
+logo = "images/rice.svg"
