Added music page

--- a/hugo.toml
+++ b/hugo.toml
@@ -17,3 +17,9 @@ description = "Software Engineer. Musician. Boba Enthusiast."
     name = "about"
     url = "/about/"
     weight = 12
+
+  #[[menu.main]]
+  #  identifier = "music"
+  #  name = "music"
+  #  url = "/music/"
+  #  weight = 12
