--- a/hugo.toml
+++ b/hugo.toml
@@ -11,6 +11,9 @@ palette = 'base16-onedark'
 title = "Aaditya Murthy"
 description = "Software Engineer. Musician. Chess-Player. Boba Enthusiast."
 
+[security]
+  enableInlineShortcodes = true
+
 [menu]
   [[menu.main]]
     identifier = "about"
