--- a/hugo.toml
+++ b/hugo.toml
@@ -21,6 +21,12 @@ description = "Software Engineer. Musician. Chess-Player. Boba Enthusiast."
     url = "/about/"
     weight = 12
 
+  [[menu.main]]
+    identifier = "music"
+    name = "music"
+    url = "/music/"
+    weight = 12
+
   #[[menu.main]]
   #  identifier = "music"
   #  name = "music"
