--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://aadi123.github.io/'
+baseURL = 'https://aadityamurthy.com/'
 languageCode = 'en-us'
 title = 'abhyāsa'
 theme = 'risotto'
