--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -9,6 +9,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Deployment environment'
+        required: false
+        default: 'staging'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -34,7 +39,7 @@ jobs:
     env:
       HUGO_VERSION: 0.147.6
       HUGO_ENVIRONMENT: production
-      TZ: America/Los_Angeles
+      TZ: America/Chicago
     steps:
       - name: Install Hugo CLI
         run: |
@@ -92,4 +97,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4       uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
